# Electroencephalograph

./: .gitattributes  README.md
Hardware/Electroencephalograph/: Acquisition.kicad_sch  Acquisition.sch  AcquisitionPowerSupply.kicad_sch  AcquisitionPowerSupply.sch  DataProcessing.kicad_sch  DataProcessingPowerSupply.kicad_sch  DataProcessingPowerSupply.sch  EEGFrontend.sch  EEGFrontendElectrode1To4.kicad_sch  EEGFrontendElectrode5To8.kicad_sch  Electroencephalograph-cache.lib  Electroencephalograph.dcm  Electroencephalograph.kicad_pcb  Electroencephalograph.kicad_prl  Electroencephalograph.kicad_pro  Electroencephalograph.kicad_sch  Electroencephalograph.lib  Electroencephalograph.pro  Electroencephalograph.sch  Electroencephalograph.xls  Isolation.kicad_sch  Isolation.sch  USBInterface.kicad_sch  USBInterface.sch  WiFiInterface.kicad_sch  fp-lib-table  sym-lib-table
Software/Firmware/: README.md
Software/Firmware/electroencephalograph_nucleo_f091_rc/: .gitignore  Cargo.toml  README.md  memory.x  openocd.cfg
Software/Firmware/electroencephalograph_nucleo_f091_rc/src/: main.rs
documentation/diagrams/: ArchitectureOverview.tex
hardware/Electroencephalograph/: Acquisition.sch  ComputerInterface.sch  DataProcessing.sch  DataProcessingPowerSupply.sch  EEGAcquisition.sch  EEGDataProcessing.sch  EEGFrontend.sch  EEGFrontendElectrode1To4.sch  EEGFrontendElectrode5To8.sch  EEGFrontendNegativeElectrode.sch  EEGFrontendPositiveElectrode.sch  EEGPowerSupply.sch  Electroencephalograph  Electroencephalograph-cache.lib  Electroencephalograph.dcm  Electroencephalograph.lib  (+10 more)
(+24 files in other folders)
