[package]
name = "electroencephalograph_nucleo_f091_rc"
version = "0.1.0"
authors = ["Robert Gawron <robert_gawron@yahoo.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
embedded-hal = "0.2.3"
panic-halt = "0.2.0"
nb = "0.1.2"

[dependencies.stm32f0xx-hal]
version = "0.17.1"
features = ["stm32f091"]


#[dependencies.stm32f3]
#features = ["stm32f302", "rt"]
#version = "0.11"